#17 Add SignalR for communication between Frontend and Backend

--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="~/css/remote.css" />
 }
 
-<div class="container-fluid">
+<div class="container-fluid w-50">
     <div class="row">
         <div class="col-md">
             <div class="camera-feed">Camera feed</div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-md">
             <div class="row">
                 <div class="col-md button-Shift">
