--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/wwwroot/css/remote.css
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/wwwroot/css/remote.css
@@ -1,6 +1,10 @@
 ﻿.camera-feed {
     height: 600px;
-    width: 800px;
+    width: 100% ;
     background-color: #000000;
     color: #FFFFFF;
+}
+
+.col-md{
+    text-align:center;
 }
