--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
@@ -8,7 +8,8 @@
 <div class="container-fluid w-50">
     <div class="row">
         <div class="col-md">
-            <div class="camera-feed">Camera feed</div>
+            @*<div class="camera-feed">Camera feed</div>*@
+            <img class="camera-feed" src="http://10.213.90.68:9000/mjpg" />
         </div>
     </div>
     <div class="row">
