--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Help.cshtml
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Help.cshtml
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
         <div class="col-md">
-            <img src="images/arrow-down.png" />
+            <img src="images/arrow-up.png" />
         </div>
         <div class="col-md">
             W
