--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
@@ -7,33 +7,38 @@
 
 <div class="container-fluid w-50">
     <div class="row">
-        <div class="col-md">
-            @*<div class="camera-feed">Camera feed</div>*@
-            <img class="camera-feed" src="http://10.213.90.68:9000/mjpg" />
+        <div class="col-md camera-feed">
+            <img id="feed" src="http://10.213.90.68:9000/mjpg" style="display:none" onload="feedLoaded()" onerror="noVideo()" />
+            <div id="img-loading" style="margin-top:25%">
+                Loading...
+            </div>            
+            <div style="display: none; margin-top:25%" id="no-video">
+                No video feed available. Ensure that the robot is activated and connected to the network.
+            </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row control-board">
         <div class="col-md">
             <div class="row">
                 <div class="col-md button-Q">
-                    <img src="images/counter-clockwise.png" />
+                    <img src="images/counter-clockwise.png" title="Press Q" />
                 </div>
                 <div class="col-md button-W">
-                    <img src="images/arrow-up.png" />
+                    <img src="images/arrow-up.png" title="Press W" />
                 </div>
                 <div class="col-md button-E">
-                    <img src="images/clockwise.png" />
+                    <img src="images/clockwise.png" title="Press E" />
                 </div>
             </div>
             <div class="row">
                 <div class="col-md button-A">
-                    <img src="images/arrow-left.png" />
+                    <img src="images/arrow-left.png" title="Press A" />
                 </div>
                 <div class="col-md button-S">
-                    <img src="images/arrow-down.png" />
+                    <img src="images/arrow-down.png" title="Press S" />
                 </div>
                 <div class="col-md button-D">
-                    <img src="images/arrow-right.png" />
+                    <img src="images/arrow-right.png" title="Press D" />
                 </div>
             </div>
         </div>
@@ -46,6 +51,25 @@
     <script src="~/js/htmlelementlistener.js"></script>
     <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <script>
+
+        function noVideo(){
+            var feed = document.getElementById("feed");
+            var noVideo= document.getElementById("no-video");
+            var imgLoading = document.getElementById("img-loading");
+            imgLoading.style.display = "none";
+            feed.style.display ="none";
+            noVideo.style.display = "block";
+        }
+
+        function feedLoaded() {
+            var feed = document.getElementById("feed");
+            var noVideo = document.getElementById("no-video");
+            var imgLoading = document.getElementById("img-loading");
+            imgLoading.style.display = "none";
+            feed.style.display = "block";
+            noVideo.style.display = "none";
+        }
+
         var keyBoardListener = new KeyBoardListener();
         var htmlElementListener = new HtmlElementListener("button");
         var connection = new signalR.HubConnectionBuilder().withUrl("/robotcommandhub").build();
