--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/wwwroot/css/site.css
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/wwwroot/css/site.css
@@ -19,6 +19,7 @@ html {
 
 body {
     margin-bottom: 60px;
+    height:100%;
 }
 
 html {
@@ -28,4 +29,13 @@ html {
 .navbar-blue{
     background-color: #073779;
     color: white;
+}
+footer{
+    background-color:white;
+}
+
+.bg-spartans {
+    background-image: url(/images/spartans.png);
+    background-color: rgba(255, 255, 255, 0.728);
+    background-blend-mode: overlay;    
 }
