--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Help.cshtml
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Help.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model HelpModel
 
-<div class="container-fluid align-items-center w-50">
+<div class="container-fluid align-items-center w-50 help-table">
     <div class="row">
         <div class="col-md fw-bold">
             On-screen controls
