Added the Lane Assist command

--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/Pages/Remote.cshtml
@@ -43,6 +43,11 @@
                     <img src="images/arrow-right.png" title="Press D" />
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md button-A">
+                    <button class="btn btn-primary button-lane" title="Press Space">Start Lane Assist</button>
+                </div>                
+            </div>
         </div>
     </div>
 </div>
